--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,6 +38,7 @@ jobs:
 
     - name: Configure Kubernetes
       run: |
+        mkdir -p $HOME/.kube
         echo "${{secrets.KUBE_CONFIG}}" | base64 --decode > $HOME/.kube/config
     
     - name: Deploy to Kubernetes
