--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,6 +36,10 @@ jobs:
       with:
         version: latest
 
+    - name: Verify cluster access
+      run: kubectl get nodes --kubeconfig=$HOME/.kube/config
+
+
     - name: Configure Kubernetes
       run: |
         mkdir -p $HOME/.kube
