--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,9 +36,21 @@ jobs:
       with:
         version: latest
 
+    - name: Prepare kubeconfig
+      run: |
+        echo "🔧 Creating .kube directory..."
+        mkdir -p $HOME/.kube
+
+        echo "📦 Decoding kubeconfig..."
+        echo "${{ secrets.KUBECONFIG }}" | base64 --decode > $HOME/.kube/config
+
+        echo "🔐 Securing permissions..."
+        chmod 600 $HOME/.kube/config
+
+        echo "✅ kubeconfig ready at $HOME/.kube/config"
+
     - name: Verify cluster access
       run: kubectl get nodes --kubeconfig=$HOME/.kube/config
-
 
     - name: Configure Kubernetes
       run: |
